# BustabitKing

./: .gitignore  BustabitKing.csproj  Gambler.cs  Helper.cs  Program.cs  README.md  README.rst  appsettings.json  pyproject.toml
bustabitking/: __main__.py  alert.py
tests/: test_bustabitking.py
