[tool.poetry]
name = "bustabitking"
version = "0.1.0"
description = ""
authors = ["LeieXoyo <gen@gen.li>"]

[tool.poetry.dependencies]
python = "^3.9"
playwright = "^1.22.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
ipykernel = "^6.13.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
